<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.LoginFragment">

    <ImageButton
        android:id="@+id/btnPrevLogin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />
    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/btnPrevLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_frame"
        app:layout_constraintBottom_toBottomOf="@id/btnPrevLogin"
        app:layout_constraintEnd_toStartOf="@id/textIcon"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="1"
        />
    <TextView
        android:id="@+id/textIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edulife"
        android:theme="@style/title"
        app:layout_constraintStart_toEndOf="@id/imgIcon"
        app:layout_constraintTop_toTopOf="@id/imgIcon"
        app:layout_constraintBottom_toBottomOf="@id/imgIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="242dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/phoneNumberTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_undraw_mobile_login_re"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/phoneNumberTitle"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:text="Telefon raqam"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/imageLogin"
        />

    <EditText
        android:id="@+id/login"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:background="@drawable/kirish_button_background"
        android:hint="+998 ** *** ** **"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@id/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberTitle"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#FF0000"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:text="noto'g'ri raqam"
        app:layout_constraintStart_toStartOf="@id/login"
        android:layout_marginStart="2dp"
        android:visibility="invisible"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@id/btnlogin"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login"

        android:gravity="top"/>
    <TextView
        android:id="@+id/chekboxText"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        android:text="@string/foydalanish_shartlari_bilan_tamishib_chiqdim"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/source_sans_pro_extralight"
        android:lineSpacingExtra="4sp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnlogin"
        android:layout_width="324dp"
        android:layout_height="60dp"
        android:text="@string/kirish"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#007E6F"/>

</androidx.constraintlayout.widget.ConstraintLayout>
